# FIELDS-public

./: .dockerignore  .editorconfig  .env.example  .env.nginx.sample  .env.postgres.sample  .gitignore  LICENSE  README.ja.md  README.md  compose.yml  nginx.env.sample
backend/: .env.example  .gitignore  .mise.toml  .rtx.toml  Makefile  pyproject.toml  sample.env
backend/db_seed/action/: master_durs.csv  names.tsv
backend/env/: dev.env
backend/fields/: config.py  depes.py  kvs.py  server.py
backend/fields/cmd/: gen_oapi.py  issue_access_token.py  routes.py  seed_subject_and_actions.py  serve.py  upsert_exemplar_video_info.py  worker.py
backend/fields/domain/auth/: schema.py  usecase.py
backend/fields/domain/debug/: schema.py
backend/fields/domain/record_eval/: usecase.py  worker_base.py  worker_impl.py  worker_mock.py
backend/fields/domain/recording/: schema.py  usecase.py
backend/fields/domain/records/: schema.py  usecase.py
backend/fields/domain/subjects/: schema.py
backend/fields/domain/users/: schema.py
backend/fields/entity/: __init__.py
backend/fields/ml/: blip2.py  mstcn.py
backend/fields/routers/v1/: __init__.py  auth.py  debug.py  exemplar_videos.py  recording.py  records.py  subjects.py  users.py
backend/fields/utils/: algo.py  datetime.py  fs.py  logging.py  openapi.py  string.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20231117194945_init/: migration.sql
backend/prisma/migrations/20231118125843_add_column_user_wise_seq/: migration.sql
backend/prisma/migrations/20231119162739_add_seq_to_action_table_add_unique_constrain_to_action_seq_and_record/: migration.sql
backend/prisma/migrations/20231119210835_add_column_recording_started_at_and_finished_at/: migration.sql
backend/prisma/migrations/20231120032827_add_column_subject_slug/: migration.sql
backend/prisma/migrations/20240114190814_add_column_tas_likelihood_into_record_segment/: migration.sql
backend/prisma/migrations/20240120103021_drop_column_dur_max_median_min_from_action_table/: migration.sql
backend/prisma/migrations/20240121133947_rename_seq_to_ord_serial_and_add_column_display_no/: migration.sql
backend/prisma/migrations/20240215025125_rename_column_record_seq_to_daily_seq/: migration.sql
backend/prisma/migrations/20240216024951_create_table_exemplarvideo_and_exemplarvideosegment/: migration.sql
backend/prisma/migrations/20240216145031_add_uniq_constraint_subject_id_and_display_no/: migration.sql
backend/prisma/migrations/20240216150203_add_uniq_constrain_subject_id_and_slug/: migration.sql
backend/proficiv/: config.py  depes.py  kvs.py  main.py  server.py
backend/proficiv/base/: schema.py
backend/proficiv/cmd/: create_user.py  gen_oapi.py  issue_access_token.py  post_local_recording.sh  routes.py  seed_subject_and_actions.py  serve.py  worker.py
backend/proficiv/domain/auth/: schema.py  usecase.py
backend/proficiv/domain/debug/: schema.py
backend/proficiv/domain/record_eval/: mock_worker.py  usecase.py  worker.py  worker_base.py  worker_impl.py  worker_mock.py
backend/proficiv/domain/recording/: schema.py  usecase.py
backend/proficiv/domain/records/: schema.py  usecase.py
backend/proficiv/domain/subjects/: schema.py  usecase.py
backend/proficiv/domain/users/: schema.py
backend/proficiv/entity/: __init__.py
backend/proficiv/ml/: blip2.py  mstcn.py
backend/proficiv/routers/v1/: __init__.py  auth.py  debug.py  recording.py  records.py  subjects.py  users.py
backend/proficiv/utils/: algo.py  audio.py  datetime.py  fs.py  logging.py  openapi.py  type_bounds.py
backend/tests/records/: test_usecase.py
docs/: 00-overview.md  02-page-url.md  03-datastore.md  data_path.md  sequence_diagram_overview.mmd  sequence_diagram_worker.mmd  system-flow.md
frontend/: .env.development  .eslintrc.json  .gitignore  .mise.toml  dprint.json  dprint.orval.json  next.config.mjs  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/components/domain/: GlobalHeader.tsx
frontend/src/components/layout/: WithHeader.tsx  WithRecordSelectableHeader.tsx
frontend/src/components/page/: Recording.tsx
frontend/src/components/util/: ChakraNextLink.tsx
frontend/src/config/: env.mjs
frontend/src/hooks/: exemplarVideos.ts  recording.ts  records.ts  subjects.ts  users.ts
frontend/src/mocks/: browser.ts  index.ts
frontend/src/model/: RecordSegmentAggr.ts  subjects.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: util.module.css
frontend/src/usecase/: pagemeta.ts  records.ts
frontend/src/utils/: datetime.ts
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: default.conf  http_static_file_server.conf  rtmp_server.conf
nginx/templates/: default.conf.template
prisma/: schema.prisma
webserver/: biome.jsonc  package.json  pnpm-lock.yaml
webserver/app/: entry.server.tsx  root.tsx
webserver/app/routes/: _index.tsx
(+27 files in other folders)
