[tool.poetry]
name = "proficiv"
version = "0.1.0"
description = "Assembly operation proficiency visualizer for YMC"
authors = ["arumakan1727 <33191176+arumakan1727@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
fire = "^0.5.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
stringcase = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.2"
pyright = "^1.1.333"
black = "^23.10.1"
isort = "^5.12.0"
pytest = "^7.4.3"


[tool.poetry.group.dev-extra.dependencies]
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#------------------ CI tool settings --------------------
[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "tmp",
  "data",
  "fake_db",
  "static",
]
[tool.isort]
profile = "black"
extend_skip = [
  "tmp",
  "data",
  "fake_db",
  "static",
]

[tool.ruff]
extend-exclude = [
  "tmp",
  "data",
  "fake_db",
  "static",
]
[tool.ruff.lint]
# see: https://docs.astral.sh/ruff/rules/
select = [
  "E",  # pycodestyle (Errors)
  "W",  # pycodestyle (Warnings)
  "F",  # pyflakes
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # bugbear
  "ANN", # flake8-annotations
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "SIM", # flake8-simplify
]
ignore = [
  "ANN101", # missing-type-self
]
[tool.ruff.lint.per-file-ignores]
"**/cmd/*.py" = ["T201"]  # allow print()

